# janus-ssmm-tlm-info

./: .copier-answers.yml  CHANGELOG.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: api_docs.md
notebooks/: test1.ipynb  test_construct2.ipynb  usage.ipynb
src/janus_ssmm_tlm_info/: __init__.py  cli.py  packets.py  time.py
tests/: test_can_import.py  test_cli.py  test_ssmm_info.py
tests/data/: __init__.py
